unpackaged/main/default/objects/CMPL123TMS__Quiz_Audit_History__c/CMPL123TMS__Quiz_Audit_History__c.object-meta.xml
<CustomObject>
    <description>This object is used to store quiz audit trail history.</description>
    <label>Quiz Audit History</label>
    <nameField>
        <displayFormat>QAH-{0000}</displayFormat>
        <label>Quiz Audit History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Audit Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>