unpackaged/main/default/objects/CMPL123TMS__Quiz_Audit_History__c/fields/CMPL123TMS__Completed_DateTime__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Completed_DateTime__c</fullName>
        <description>Quiz completed Date and Time</description>
        <inlineHelpText>Quiz completed Date and Time</inlineHelpText>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </CustomField>