unpackaged/main/default/objects/CMPL123TMS__Quiz_Audit_History__c/fields/CMPL123TMS__Number_Of_Correct_Answers__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Number_Of_Correct_Answers__c</fullName>
        <description>Number of questions answered correctly in a quiz.</description>
        <inlineHelpText>Number of questions answered correctly in a quiz.</inlineHelpText>
        <label>Number Of Correct Answers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>