unpackaged/main/default/objects/CMPL123TMS__Quiz_Audit_History__c/fields/CMPL123TMS__Number_Of_Questions_Answered__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Number_Of_Questions_Answered__c</fullName>
        <description>Number of questions answered in a particular quiz</description>
        <inlineHelpText>Number of questions answered in a particular quiz</inlineHelpText>
        <label>Number Of Questions Answered</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>