unpackaged/main/default/objects/CMPL123TMS__Quiz_Audit_History__c/fields/CMPL123TMS__Related_Quiz__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_Quiz__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Audit History related quiz</description>
        <inlineHelpText>Audit History related quiz</inlineHelpText>
        <label>Related Quiz</label>
        <referenceTo>CMPL123TMS__TMS_Quizzes__c</referenceTo>
        <relationshipLabel>Quiz Audit Histories</relationshipLabel>
        <relationshipName>Quiz_Audit_Histories</relationshipName>
        <type>Lookup</type>
    </CustomField>