unpackaged/main/default/objects/CMPL123TMS__Quiz_Audit_History__c/fields/CMPL123TMS__Related_Quiz_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_Quiz_Name__c</fullName>
        <description>Related Quiz Title</description>
        <label>Related Quiz Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>