unpackaged/main/default/objects/CMPL123TMS__Quiz_Audit_History__c/fields/CMPL123TMS__Related_Training_Record__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_Training_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Training record for that quiz</description>
        <label>Related Training Record</label>
        <referenceTo>CMPL123TMS__Training_Record__c</referenceTo>
        <relationshipLabel>Quiz Audit Histories</relationshipLabel>
        <relationshipName>Quiz_Audit_Histories</relationshipName>
        <type>Lookup</type>
    </CustomField>