unpackaged/main/default/objects/CMPL123TMS__Quiz_Audit_History__c/fields/CMPL123TMS__Related_User__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related User</description>
        <inlineHelpText>Related User</inlineHelpText>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quiz_Audit_Histories</relationshipName>
        <type>Lookup</type>
    </CustomField>