unpackaged/main/default/objects/CMPL123TMS__Quiz_Audit_History__c/fields/CMPL123TMS__Start_DateTime__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Start_DateTime__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </CustomField>